<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/Setting_Gen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/Title"
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:background="#5f00"
        android:gravity="center"
        android:text="设置"
        android:textColor="@color/Black"
        android:textSize="60px" />


    <TextView
        android:id="@+id/AboutMe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Title"
        android:layout_marginLeft="50px"
        android:gravity="center_vertical"
        android:padding="15px"
        android:text="@string/Setting_aboutme"
        android:textColor="@color/Black"
        android:textSize="45px" />

    <TextView
        android:id="@+id/Setting_UserMethod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/AboutMe"
        android:layout_marginLeft="50px"
        android:gravity="center_vertical"
        android:padding="15px"
        android:text="@string/Setting_userMethod"
        android:textColor="@color/Black"
        android:textSize="45px" />

    <TextView
        android:id="@+id/AboutVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Setting_UserMethod"
        android:layout_marginLeft="50px"
        android:gravity="center_vertical"
        android:padding="15px"
        android:text="@string/Setting_aboutVersion"
        android:textColor="@color/Black"
        android:textSize="45px" />

    <TextView
        android:id="@+id/Copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5px" />
</com.zhy.autolayout.AutoRelativeLayout>